// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with align 1`] = `
<div
  className="typography primary center singleLineEllipsis text text2Normal"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly with color 1`] = `
<div
  className="typography secondary start singleLineEllipsis text text2Normal"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly with element 1`] = `
<p
  className="typography primary start text text2Normal"
  data-testid="text"
>
  text
</p>
`;

exports[`Text renders correctly with element as children 1`] = `
<div
  className="typography primary start singleLineEllipsis text text2Normal"
  data-testid="text"
>
  <div>
    text
  </div>
</div>
`;

exports[`Text renders correctly with empty props 1`] = `
<div
  className="typography primary start singleLineEllipsis text text2Normal"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly with type 1`] = `
<div
  className="typography primary start singleLineEllipsis text text1Normal"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly with weight 1`] = `
<div
  className="typography primary start singleLineEllipsis text text2Medium"
  data-testid="text"
>
  text
</div>
`;
